Adding support for composite devices. Basic model implementation done with testing against MongoDB. SITEWHERE-41